--- a/slickmap.css
+++ b/slickmap.css
@@ -86,15 +86,16 @@ body {
 	// text-align: center;
 	color: white;
 	background: #0090ff;
-	text-shadow: 0 0 5px rgba(0,0,0,.2);
+	text-shadow: 0 0 10px rgba(0,0,0,.1);
 	border: 1px solid  rgba(0,0,0,.025);
-	border-radius: 2px;
-	box-shadow: 0px 2px 1px rgba(0,0,0,0.35);
+	//border-radius: 2px;
+	box-shadow: 0px 2px 1px rgba(0,0,0,0.15);
 	text-decoration: none;
+	//transition: padding-left 50ms linear;
 }
 .primaryNav li a:hover {
-	background-color: #e2f4fd;
-	border-color: #97bdcf;
+	//padding-left: 1.1em;
+	background-color: #0070f9;
 }
 a:link:after,
 a:visited:after {
@@ -104,9 +105,10 @@ a:visited:after {
 	font-weight: 600;
 	font-size: .75em;
 	margin-top: .25em;
-	text-shadow: 0 0 0 rgba(0,0,0,0);
+	// text-shadow: 0 0 0 rgba(0,0,0,0);
 	word-wrap: break-word;
-	color: rgba(0,0,0,.65);
+	//color: rgba(0,0,0,.65);
+	color: rgba(255,255,255,.75);
 }
 .primaryNav li a:link:after,
 .primaryNav li a:visited:after {
@@ -128,7 +130,7 @@ a:visited:after {
 }
 .primaryNav ul ul li a:hover {
 	// border-color: #94b75f;
-	// background-color: #e7f1d7;
+	background-color: #09a63e;
 }
 .primaryNav ul ul li:first-child {
 	padding-top: 2em;
@@ -159,8 +161,7 @@ a:visited:after {
 	margin-left: auto;
 }
 .primaryNav ul ul ul li a:hover {
-	background-color: #EF6C00;
-	border-color: #d1b62c;
+	background-color: #ff831b;
 }
 .primaryNav ul ul ul li:first-child {
 	padding-top: 1em;
@@ -185,8 +186,7 @@ a:visited:after {
 	width: 80%;
 }
 .primaryNav ul ul ul ul li a:hover {
-	background-color: #f0defe;
-	border-color: #b887dc;
+	background-color: #c20035;
 }
 .primaryNav ul ul ul ul li a:link:after,
 .primaryNav ul ul ul ul li a:visited:after {
@@ -206,7 +206,7 @@ a:visited:after {
 	content: '';
 	position: absolute;
 	border-width: 0;
-	border-color: #e5e5e5;
+	border-color: #e0e0e0;
 	border-style: solid;
 	z-index: -1;
 	/* border-color: red; */
@@ -252,7 +252,7 @@ a:visited:after {
 	left: 0;
 	border-left-width: 2px;
 	border-bottom-width: 2px;
-	/* border-color: red; */ 
+	/* border-color: red; */
 }
 .primaryNav ul ul ul li:first-child:before {
 	height: 2.125em;
@@ -271,12 +271,11 @@ a:visited:after {
 .primaryNav ul ul ul li:after {
 	border-width: 0;
 }
-.primaryNav ul ul ul ul li:before {
-	display: none;
-}
+.primaryNav ul ul ul ul li:before,
 .primaryNav ul ul ul ul li:first-child:before {
 	display: none;
 }
+
 .primaryNav ul ul ul ul:before {
 	width: 1px;
 	height: calc(100% + 2.5em);
@@ -314,19 +313,19 @@ a:visited:after {
 	text-align: center;
 	color: white;
 	background-color: #ff9d00;
-	border-radius: 2px;
-	box-shadow: 0px 2px 1px rgba(0,0,0,0.35);
+	border: 1px solid  rgba(0,0,0,.025);
+	box-shadow: 0px 2px 0 rgba(0,0,0,0.15);
+	text-shadow: 0 0 10px rgba(0,0,0,.15);
 	text-decoration: none;
 }
 .utilityNav li a:hover {
-	background-color: #fffce5;
-	border-color: #d1b62c;
+	background-color: #ff831b;
 }
 .utilityNav li a:link:after,
 .utilityNav li a:visited:after {
-	color: rgba(0,0,0,.65);
+	color: rgba(255,255,255,.75);
 	font-size: .75em;
-	font-weight: 700;
+	font-weight: 600;
 	margin-top: .25em;
 }
 
@@ -359,9 +358,9 @@ a:visited:after {
 }
 
 /* The media queries below keep grid column widths intact when
-the page wraps to avoid wrapped line items showing at 100% width. 
+the page wraps to avoid wrapped line items showing at 100% width.
 These queries also make the homepage line item flex appropriately.
-When your sitemap is complete, remove the queries below that you 
+When your sitemap is complete, remove the queries below that you
 don't need, and your sitemap layout will function perfectly. */
 
 /* three column */
