--- a/slickmap.css
+++ b/slickmap.css
@@ -28,7 +28,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 * {
 	box-sizing: border-box;
 }
-
 body {
 	font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
 	background: white;
@@ -83,36 +82,25 @@ body {
 	display: block;
 	font-size: .9375em;
 	font-weight: bold;
-	// text-align: center;
 	color: white;
 	background: #0090ff;
 	text-shadow: 0 0 10px rgba(0,0,0,.1);
 	border: 1px solid  rgba(0,0,0,.025);
-	//border-radius: 2px;
 	box-shadow: 0px 2px 1px rgba(0,0,0,0.15);
 	text-decoration: none;
-	//transition: padding-left 50ms linear;
 }
 .primaryNav li a:hover {
-	//padding-left: 1.1em;
 	background-color: #0070f9;
 }
 a:link:after,
 a:visited:after {
 	content: " "attr(href)" ";
 	display: block;
-	// text-transform: uppercase;
 	font-weight: 600;
 	font-size: .75em;
 	margin-top: .25em;
-	// text-shadow: 0 0 0 rgba(0,0,0,0);
 	word-wrap: break-word;
-	//color: rgba(0,0,0,.65);
 	color: rgba(255,255,255,.75);
-}
-.primaryNav li a:link:after,
-.primaryNav li a:visited:after {
-	// color: #78a9c0;
 }
 
 /* -------- Second Level --------- */
@@ -126,18 +114,12 @@ a:visited:after {
 }
 .primaryNav ul ul li a {
 	background-color: #28bf5e;
-	// border-color: #b8da83;
 }
 .primaryNav ul ul li a:hover {
-	// border-color: #94b75f;
 	background-color: #09a63e;
 }
 .primaryNav ul ul li:first-child {
 	padding-top: 2em;
-}
-.primaryNav ul ul li a:link:after,
-.primaryNav ul ul li a:visited:after {
-	// color: #8faf5c;
 }
 
 /* -------- Third Level --------- */
@@ -153,7 +135,6 @@ a:visited:after {
 }
 .primaryNav ul ul ul li a {
 	background-color: #ff9d00;
-	// border-color: #e3ca4b;
 	font-size: .75em;
 	padding: .75em;
 	width: 90%;
@@ -168,20 +149,18 @@ a:visited:after {
 }
 .primaryNav ul ul ul li a:link:after,
 .primaryNav ul ul ul li a:visited:after {
-	// color: #ccae14;
 	font-size: .75em;
 }
 
 /* --------	Fourth Level --------- */
 
 .primaryNav ul ul ul ul {
-	margin-top: 0em;
+	margin-top: 0;
 	padding-top: .3125em;
 	padding-bottom: .3125em;
 }
 .primaryNav ul ul ul ul li a {
 	background-color: #de003a;
-	// border-color: #d5b4eb;
 	padding: .75em ;
 	width: 80%;
 }
@@ -206,7 +185,7 @@ a:visited:after {
 	content: '';
 	position: absolute;
 	border-width: 0;
-	border-color: #e0e0e0;
+	border-color: #e3e3e3;
 	border-style: solid;
 	z-index: -1;
 	/* border-color: red; */
@@ -305,7 +284,6 @@ a:visited:after {
 }
 .utilityNav li a {
 	display: block;
-	// border: 2px solid #e3ca4b;
 	font-size: .75em;
 	font-weight: 700;
 	padding: .75em 1em;
